# mdbook-pagecrypt

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: mdbook.yml  release-plz.yml
docs/: book.toml
docs/src/: SUMMARY.md  guide.md
src/: decrypt.html  decrypt.js  lib.rs  main.rs
