[package]
name = "mdbook-pagecrypt"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Wybxc/mdbook-pagecrypt"
description = "Encrypt your mdbook-built site with password protection."

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.86"
base64 = "0.22.1"
getrandom = "0.2.15"
log = "0.4.21"
mdbook = "0.4.40"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.61"
urlencoding = "2.1.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
minify-html = "0.15.0"
minify-js = "0.6.0"
