[package]
name = "mdbook-pagecrypt"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/Wybxc/mdbook-pagecrypt"
description = "Encrypt your mdbook-built site with password protection."
categories = ["cryptography"]
keywords = ["mdbook", "password", "site", "encryption", "protection"]

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.102"
base64 = "0.22.1"
getrandom = "0.4.1"
log = "0.4.29"
mdbook-html = "0.5.2"
mdbook-renderer = "0.5.2"
pbkdf2 = "0.12.2"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
urlencoding = "2.1.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
minify-html = "0.18.1"
minify-js = "0.6.0"
